# mini_compiler

./: .clang-format  .gitignore  A_tree.json  CMakeLists.txt  LICENSE  README.md  TODO.md  arrayNode.cpp  arrayNode.hpp  build.sh  cCompilerCommon.cpp  cCompilerCommon.hpp  cParser.cpp  cParser.hpp  cParser.y  cScanner.cpp  cScanner.l  compiler  ctrlNode.cpp  ctrlNode.hpp  debug.sh  demo.html  echo  exprNode.cpp  exprNode.hpp  funcNode.cpp  funcNode.hpp  main.cpp  noError.h  objtest.cpp  parsetree.txt  runner.cpp  runner.hpp  runnerMain.cpp  statNode.cpp  statNode.hpp  structNode.cpp  structNode.hpp  to_see.txt  任务一文档：词法、语法和一点语义分析建议.md
ast_tree/: array_node.cpp  ast_node.cpp  ctrl_node.cpp  expr_node.cpp  func_node.cpp  stat_node.cpp  struct_node.cpp
include/: array_node.hpp  ast_node.hpp  ctrl_node.hpp  expr_node.hpp  func_node.hpp  stat_node.hpp  struct_node.hpp
report/: Report.md
test/ast/: Struct.c  string.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
test/finalTask/: task1.c  task2.c  task3.c
test/task1/: test4.c  test5.c  test8.c  test9.c
任务一测试用例（词法和语法错误检测，ParseTree）/: test1.c  test2.c  test3.c  test7.c
